--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,9 +1,12 @@
-spring.profiles.active=${APP_PROFILE:test}
+# Dados de conexão com o banco H2
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.username=sa
+spring.datasource.password=
 
-spring.jpa.open-in-view=false
+# Configuração do cliente web do banco H2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 
-security.oauth2.client.client-id=${CLIENT_ID:dscatalog}
-security.oauth2.client.client-secret=${CLIENT_SECRET:dscatalog123}
-
-jwt.secret=${JWT_SECRET:MY-JWT-SECRET}
-jwt.duration=${JWT_DURATION:86400}
+# Configuração para mostrar o SQL no console
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
